<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">Sudoku</string>
  <string name="generate">Generate</string>
  <string name="solve">Solve</string>
  <string name="check">Check</string>
  <string name="asset_statements" translatable="false">[{ \"include\": \"https://sudokuplayground.firebaseapp.com/.well-known/assetlinks.json\" }]</string>
  <string name="share_board">Share board</string>
  <string name="send_to">Send to</string>
  <string name="install_app">Install app</string>
  <string name="install">Install</string>
  <string name="title_dynamic_feature">Module Title</string>
  <string name="new_game">NEW GAME</string>
  <string name="time_remaining">Time Remaining</string>
  <string name="solve_me">Solve Me!</string>
  <string name="_1">1</string>
  <string name="_2">2</string>
  <string name="_3">3</string>
  <string name="_4">4</string>
  <string name="_5">5</string>
  <string name="_6">6</string>
  <string name="_7">7</string>
  <string name="_8">8</string>
  <string name="_9">9</string>
  <string name="_00_00_00">00:00:00</string>
  <string name="guide_to_fill_box">To fill the box, Please hold on box and scroll up/down/left/right</string>
  <string name="time_up">Time up!</string>
  <string name="format_timer">00:%1$s:%2$s</string>
</resources>
